--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
