--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.45.1",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "framer-motion": "^11.2.11",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
