--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-testing-library": "^7.15.4",
     "jsdom": "^27.4.0",
     "msw": "^2.12.7",
     "typescript": "^5.4.5",
